Update server and fixed bugs in System